Implemeted Logout feature
