# Garage Management System/src/app/authentication/commons/constants/routes.go
@@ -1,7 +1,8 @@
 package constants
 
 const (
-	AuthRoutePrefix       = "/api/auth"
-	RegisterRoute = "/register"
-	LoginUserRoute        = "/login"
+	AuthRoutePrefix = "/api/auth"
+	RegisterRoute   = "/register"
+	LoginUserRoute  = "/login"
+	LogoutUserRoute  = "/logout"
 )
