# Garage Management System/src/app/authentication/models/logoutUserModels.go
@@ -1,0 +1,6 @@
+package models
+
+
+type BFFLogoutUserResponse struct {
+	Message string `json:"message" example:"user logged out successfully"`
+}
